# hirop

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2cca755  CMakeLists.txt.user.a0508a1  LICENSE  README.md  TODOList  env.sh  tags
3rds/include/hsc3/proxy/: ProxyIO.h
config/: ClassicGenConfig.yaml  ClassicPPConfig.yaml  TODconfig.yaml
include/asr/: aiui_asr.h  audio_source.h  getintent_listener.h  hirop_asr.h
include/datamanager/: datauri.h  file_datawriter.h  hdata.h  idatawirter.h  jointdata.h  posedata.h
include/force/: IForceLoader.h  fileConfiguer.h  forceCppBase .h  forceCppLoader.h  forceExport.h  forcePluginAggre.h  iForce.h
include/gripper/: c_base_gripper.h  configuer.h  cpp_loader.h  execute.h  gripper.h  igripper.h  iloader.h
include/hplugin/: hplugin_define.h  hpluginloader.h
include/msgs/: odometry.h  pose.h  posestamped.h  twist.h
include/nav/: autorunmotion.h  circlemotion.h  linearmotion.h  mobile_robot.h  motion.h  onfinishedlistener.h  ros_mobile_robot.h
include/pickplace/: c_base_generator.h  c_base_pickplace.h  configuer.h  cpp_loader.h  entity_factory.h  execute_process.h  igenerator.h  iloader.h  ipickplace.h  pickplace.h  py_base_generator.h  py_base_pickplace.h
include/utils/: fs_helper.h  idebug.h  py_lock_helper.h
include/vision/: c_base_detector.h  c_base_trainer.h  c_base_trainer.h.autosave  configure.h  cpp_loader.h  data_writer.h  detection_listener.h  detector.h  entity_factory.h  hirop_debug.h  hlibload.h  hplugin.h  idetector.h  iloader.h  itrainer.h  linemod_trainer.h  py_base_detector.h  py_loader.h  simaple_detector.h  simaple_trainer.h  simaple_trainer.h.gch  trainer.h  trainer_listener.h  vision.h
libs/: libHPlugin.so.1  libHPlugin.so.1.0.0  libyaml-cpp.so.0.6.2
perception/: CMakeLists.txt
perception/filters/: CMakeLists.txt  region_filters.cpp  region_filters.h
src/: CMakeLists.txt
src/asr/: CMakeLists.txt  FileUtil.cpp  aiui_asr.cpp  aiui_config.cmake.in  hirop_asr.cmake.in  hirop_asr.cpp
src/data_manager/: CMakeLists.txt  datauri.cpp  file_datawriter.cpp  hdata.cpp  hirop_datamanager.cmake.in  jointdata.cpp  posedata.cpp
src/force/: CMakeLists.txt  readme.md
src/force/config/: parmtemplate.yaml
src/force/framework/: CMakeLists.txt  fileConfiguer.cpp  forceCppBase .cpp  forceCppLoader.cpp  forcePluginAggre.cpp  force_test.cpp  hirop_force.cmake.in
src/force/hsImpenderr/: CMakeLists.txt  hsImpenderrForce.cpp  hsImpenderrForce.h
src/gripper/: CMakeLists.txt
src/gripper/airpowere/: CMakeLists.txt  airpowere_gripper.cpp  airpowere_gripper.h
src/gripper/framework/: CMakeLists.txt  c_base_gripper.cpp  configuer.cpp  cpp_loader.cpp  execute.cpp  hirop_gripper.cmake.in
src/gripper/inspire/: CMakeLists.txt  inspire_gripper.cpp  inspire_gripper.h
src/gripper/robotIO/: CMakeLists.txt  robotIO_gripper.cpp  robotIO_gripper.h
src/gripper/serial/: CMakeLists.txt  fiveFingerSerialGripper.cpp  fiveFingerSerialGripper.h  serial_gripper.cpp  serial_gripper.h  test.cpp
src/navigation/: CMakeLists.txt  autorunmotion.cpp  circlemotion.cpp  linearmotion.cpp  mobile_robot.cpp  motion.cpp
src/perception/: CMakeLists.txt
src/perception/filters/: CMakeLists.txt  object_filter.cpp  object_filter.h  pcl_fusion.cpp  pcl_fusion.h  pointcloud_publish.cpp  pointcloud_publish.h  pointcloud_ros.cpp  pointcloud_ros.h  region_filters.cpp  region_filters.h  voxel_filter.cpp  voxel_filter.h
src/perception/sources/: CMakeLists.txt
src/pickplace/: CMakeLists.txt
src/pickplace/actuator/: CMakeLists.txt  classic_actuator.cpp  classic_actuator.h
src/pickplace/framework/: CMakeLists.txt  c_base_generator.cpp  c_base_pickPlace.cpp  configuer.cpp  cpp_loader.cpp  execute_process.cpp  hirop_pickplace.cmake.in
src/pickplace/generator/: CMakeLists.txt  classic_generator.cpp  classic_generator.h
src/vision/: CMakeLists.txt
src/vision/TODDetector/: .TODDetector.cpp.swi  .TODDetector.cpp.swj  .TODDetector.cpp.swk  .TODDetector.cpp.swl  .TODDetector.cpp.swm  .TODDetector.cpp.swn  .TODDetector.cpp.swo  .TODDetector.cpp.swp  .linemod_detector_Tool.cpp.swo  .linemod_detector_Tool.cpp.swp  CMakeLists.txt  TODDetector.cpp  TODDetector.h  linemod_detector_Tool.cpp  linemod_detector_Tool.h  tensorflowCCVisionLib.h
src/vision/TODTrainPy/: TODTrainPy.py
src/vision/detector/: CMakeLists.txt  linemod_detector.cpp  linemod_detector.h  simaple_detector.cpp  simaple_detector.h
src/vision/framework/: CMakeLists.txt  c_base_detector.cpp  c_base_trainer.cpp  configure.cpp  cpp_loader.cpp  detector.cpp  hirop_vision.cmake.in  py_base_detector.cpp  py_loader.cpp  trainer.cpp
src/vision/framework/utils/: CMakeLists.txt  py_lock_helper.cpp
src/vision/trainer/: CMakeLists.txt  linemod_trainer.cpp  linemod_trainer.h
test/: CMakeLists.txt  asr_test.cpp  detection_test.cpp  dm_test.cpp  navigation_test.cpp  pcd_viewer.py  perception_config.yaml  regionFilter_config.yaml  ros_pcl_test.py  test.pcd  test.yaml  test3.yaml  train_test.cpp
